# DubinsFleetPlanner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  USAGE.md
libs/: CMakeLists.txt
libs/combinations/: CMakeLists.txt  combinations.hpp
libs/csv_reader/: CMakeLists.txt  csv_reader.hpp
notebooks/: Dubins_trajectory_interception.ipynb  FullSummaryAnalyzer.ipynb
script/: AllProblemGenNTest.py  AllProblemsGenNTest.py  ConflictPlotting.py  Dubins.py  DubinsPathFitting.py  Formation.py  FormationProblemGenerator.py  FullSummaryAnalyzer.ipynb  ProblemGenerator.py  ProblemUI.py  ProfileAC_Nums.py  _plotting_extra.py  figure.py  fitting_animation.py  ioUtils.py  plotting.py  plotting_extra.py  traffic_pb_generator.py  traffic_pb_simulator.py  traffic_player.py
script/UI/: MySliders.py  util.py
src/: Aircraft.cpp  Aircraft.h  BaseDubins.cpp  BaseDubins.hpp  BaseExtendedDubins.cpp  BaseExtendedDubins.hpp  CMakeLists.txt  ConflictDetection.cpp  ConflictDetection.hpp  ConflictList.cpp  ConflictList.hpp  ConflictMatrix.cpp  ConflictMatrix.hpp  Dubins.cpp  Dubins.hpp  DubinsPrimitives.cpp  DubinsPrimitives.hpp  ExtendedDubins.cpp  ExtendedDubins.hpp  Fitting.cpp  Fitting.hpp  FleetPathPlanner.cpp  FleetPathPlanner.hpp  FleetPlanner.cpp  FleetPlanner.hpp  GenericDubins.hpp  Primitives.cpp  Primitives.hpp  ProjectHeader.h.in  inputParser.cpp  inputParser.hpp  ioUtils.cpp  ioUtils.hpp  main.cpp  utils.cpp  utils.hpp
src/ConflictTrajectories/: circleCircle.hpp  lineCircle.hpp  linearClimb.hpp
test/: CMakeLists.txt  FleetDrawPrimitives.hpp  GeometricDistanceTestfile.csv  csv_reader.hpp  parseAndPlot.cpp  plotBasicDubinsFleet.cpp  plotDubins.cpp  plotDubins.hpp  plotDubinsDist.cpp  plotDubinsMoveDist.cpp  plotDubinsWithGeometries.cpp  plotGeometries.cpp  randomPathShape.hpp  sequenceDubinsFleet.cpp  testDubinsSeparation.cpp  testDubinsSeparation.hpp  testGeometricDistance.cpp  testGeometricDistance.hpp  testTemporalDistance.cpp  testTemporalDistance.hpp
